# ECE_574A_Assignment3

./: .gitignore  CMakeLists.txt  README.md  README.txt  hls_test1.v
scripts/: add_files_to_project.tcl  open_project.tcl  project.tcl  remove_files_from_project.tcl  run_simulation.tcl  run_test.tcl  validate_code.py  validation_tests.csv
src/: AlapScheduler.cpp  AlapScheduler.h  AsapScheduler.cpp  AsapScheduler.h  CMakeLists.txt  CircuitComponents.h  DataManager.cpp  DataManager.h  FDScheduler.cpp  FDScheduler.h  FileParser.cpp  FileParser.h  FileWriter.cpp  FileWriter.h  FsmGenerator.cpp  FsmGenerator.h  GraphComponents.h  GraphSimplifier.cpp  GraphSimplifier.h  HighLevelSynthesisTool.cpp  HighLevelSynthesisTool.h
verilog_files/Tb_muhtasim/: hls_test1ref_tb.txt
verilog_files/autogen/: hls_test1.v
verilog_files/reference/: hls_lat_test1_ref.v  hls_lat_test3_ref.v  hls_lat_test4_ref.v  hls_lat_test5_ref.v  hls_lat_test6_ref.v  hls_test1_ref.v  hls_test2_ref.v  hls_test3_ref.v  hls_test5_ref.v  hls_test8_ref.v  test_if1_ref.v  test_if2_ref.v  test_if3_ref.v  test_if4_ref.v
verilog_files/tb/: clk_gen.v  delay_gen.v  error_monitor.v  hls_lat_test1_ref.v  hls_lat_test1_tb.v  hls_lat_test2_ref.v  hls_lat_test2_tb.v  hls_lat_test3_ref.v  hls_lat_test3_tb.v  hls_lat_test4_ref.v  hls_lat_test4_tb.v  hls_lat_test5_ref.v  hls_lat_test5_tb.v  hls_lat_test6_ref.v  hls_lat_test6_tb.v  hls_test1_ref.v  hls_test1_tb.v  hls_test2_ref.v  hls_test2_tb.v  hls_test3_ref.v  hls_test3_tb.v  hls_test4_ref.v  hls_test4_tb.v  hls_test5_ref.v  hls_test5_tb.v  hls_test6_ref.v  hls_test6_tb.v  hls_test7_ref.v  hls_test7_tb.v  hls_test8_ref.v  hls_test8_tb.v  rst_gen.v  serror_monitor.v  test_if1_ref.v  test_if1_tb.v  test_if2_ref.v  test_if2_tb.v  test_if3_ref.v  test_if3_tb.v  test_if4_ref.v  (+1 more)
